add css styling using div and span

--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/css.css" rel="stylesheet" type="text/css" media="all">
     <title>Epicodus Experience</title>
   </head>
   <body>
     <h1>Epicodus Experience Blog</h1>
     <h2>Kyle Helyar's and Brian Grant's experience so far. . .</h2>
     <img src="img/epilogo.png" alt="Epicodus logo" />
-    <p>The first day of class included:</p>
-    <ul>
-      <li>Git Intro</li>
-      <li>HTML block elements</li>
-      <li>HTML inline elements</li>
-      <li>HTML indentation and spacing</li>
-    </ul>
-    <p>The second day of class included:</p>
-    <ul>
-      <li>How to make READMEs</li>
-      <li>CSS styling</li>
-      <li>CSS and HTML Debugging</li>
-      <li>Making GitHub Pages</li>
-      <li>Branching and Merging</li>
-    </ul>
-    <p>Today we are practicing:</p>
-    <ul>
-      <li>Styling with CSS classes</li>
-      <li>Divs and spans</li>
-      <li>and more to follow</li>
-    </ul>
+    <div class ="blog-posts">
+      <p>The first day of class included:</p>
+      <ul>
+        <li>Git Intro</li>
+        <li>HTML block elements</li>
+        <li>HTML inline elements</li>
+        <li>HTML indentation and spacing</li>
+      </ul>
+      <p>The second day of class included:</p>
+      <ul>
+        <li>How to make READMEs</li>
+        <li>CSS styling</li>
+        <li>CSS and HTML Debugging</li>
+        <li>Making GitHub Pages</li>
+        <li>Branching and Merging</li>
+      </ul>
+      <p>Today we are practicing:</p>
+      <ul>
+        <li>Styling with CSS classes</li>
+        <li>Divs and spans</li>
+        <li>and more to follow</li>
+      </ul>
+    </div>
+    <div class="about-me">
+      <h3>About the authors:</h3>
+      <p> Kyler Helyar and Brian Grant are both students in the Introduction
+        to Programming class at <span class="blue">Epicodus</span>. We are located in Portland, OR.
+      </p>
+    </div>
 
   </body>
 </html>
