--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
     <h2>Kyle Helyar's and Brian Grant's experience so far. . .</h2>
     <img src="img/epilogo.png" alt="Epicodus logo" />
     <div class ="blog-posts">
-      <p>The first day of class included:</p>
-      <ul>
-        <li>Git Intro</li>
-        <li>HTML block elements</li>
-        <li>HTML inline elements</li>
-        <li>HTML indentation and spacing</li>
-      </ul>
-      <p>The second day of class included:</p>
-      <ul>
-        <li>How to make READMEs</li>
-        <li>CSS styling</li>
-        <li>CSS and HTML Debugging</li>
-        <li>Making GitHub Pages</li>
-        <li>Branching and Merging</li>
-      </ul>
-      <p>Today we are practicing:</p>
-      <ul>
-        <li>Styling with CSS classes</li>
-        <li>Divs and spans</li>
-        <li>and more to follow</li>
-      </ul>
+      <div class="margin">
+        <p>The first day of class included:</p>
+        <ul>
+          <li>Git Intro</li>
+          <li>HTML block elements</li>
+          <li>HTML inline elements</li>
+          <li>HTML indentation and spacing</li>
+        </ul>
+      </div>
+      <div class="margin">
+        <p>The second day of class included:</p>
+        <ul>
+          <li>How to make READMEs</li>
+          <li>CSS styling</li>
+          <li>CSS and HTML Debugging</li>
+          <li>Making GitHub Pages</li>
+          <li>Branching and Merging</li>
+        </ul>
+      </div>
+      <div class="margin">
+        <p>Today we are practicing:</p>
+        <ul>
+          <li>Styling with CSS classes</li>
+          <li>Divs and spans</li>
+          <li>and more to follow</li>
+        </ul>
+      </div>
     </div>
     <div class="about-me">
       <h3>About the authors:</h3>
